# rust-ray-cli

./: .gitignore  CLAUDE.md  Cargo.toml  GPUI_GUIDE.md  PERFORMANCE_VALIDATION_REPORT.md  build-wasm.sh  readme.md  test_table_detection.rs
.github/: CODEOWNERS  README.md  WORKFLOW_SUMMARY.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  issue-management.yml  monitoring.yml  pr-automation.yml  pr.yml  quality-gates.yml  release.yml  security.yml
.zed/: tasks.json
benches/: performance_benchmarks.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/event-application-log/: Cargo.toml
crates/event-application-log/src/: lib.rs
crates/event-exception/: Cargo.toml
crates/event-exception/src/: lib.rs
crates/event-log/: Cargo.toml
crates/event-log/src/: lib.rs
crates/event-query/: Cargo.toml
crates/event-query/src/: lib.rs
crates/event-table/: Cargo.toml
crates/event-table/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
memory/agents/: README.md
memory/sessions/: README.md
src/: app.rs  event_details.rs  event_factory.rs  event_list.rs  event_storage.rs  lib.rs  main.rs  payload.rs  payload_storage.rs  payload_types.rs  performance.rs  server.rs  tui.rs  tui_app.rs  tui_markdown.rs  ui_components.rs  wasm_event_factory.rs
src/events/: application_log.rs  application_log_payload.rs  base.rs  cache.rs  event_type.rs  exception.rs  exception_payload.rs  factory.rs  http.rs  log.rs  log_payload.rs  mod.rs  query.rs  query_payload.rs  table.rs  table_payload.rs  types.rs
src/events/application_log/: mod.rs
src/events/exception/: mod.rs  ui.rs
src/events/log/: mod.rs  ui.rs
src/events/processors/: application_log.rs  cache.rs  exception.rs  http.rs  log.rs  mod.rs  query.rs  table.rs
src/events/query/: mod.rs  ui.rs
src/events/renderers/: application_log.rs  cache.rs  exception.rs  http.rs  log.rs  mod.rs  query.rs  table.rs
src/events/table/: mod.rs
src/payloads/: application_log_payload.rs  exception_payload.rs  factory.rs  log_payload.rs  mod.rs  query_payload.rs  table_payload.rs  types.rs
tests/: performance_manual_validation.rs  performance_validation.rs
wasm-modules/: event_application_log.wasm  event_exception.wasm  event_executed_query.wasm  event_log.wasm  event_query.wasm  event_table.wasm
