[workspace]
members = [
    "crates/core",
    "crates/event-table",
    "crates/event-log",
    "crates/event-query",
    "crates/event-exception",
    "crates/event-application-log",
]

[workspace.dependencies]
serde_json = "1.0"
chrono = "0.4"
eframe = { version = "0.29.1", features = ["default", "__screenshot"] }
egui_extras = { version = "0.29.1", features = ["default", "image", "syntect"] }

[package]
name = "rust-ray-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "./crates/core" }
event-table = { path = "./crates/event-table" }
event-log = { path = "./crates/event-log" }
event-query = { path = "./crates/event-query" }
event-exception = { path = "./crates/event-exception" }
event-application-log = { path = "./crates/event-application-log" }
eframe = { workspace = true }
egui_extras = { workspace = true }
env_logger = { version = "0.11.5", default-features = false, features = ["auto-color", "humantime"] }
hyper = { version = "1.5.0", features = ["full"]}
tokio = { version = "1.41.1", features = ["full"]}
serde_json = { workspace = true }
chrono = { workspace = true }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.8.0"
tl = "0.7.8"
