[workspace]
members = [
    "crates/shared",
    "crates/event-table",
    "crates/event-log",
    "crates/event-query",
    "crates/event-exception",
    "crates/event-application-log",
]

[workspace.dependencies]
serde = { version = "1.0.214", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
chrono = "0.4"
gpui = { git = "https://github.com/zed-industries/zed" }

[package]
name = "rust-ray-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "./crates/shared" }
event-table = { path = "./crates/event-table" }
event-log = { path = "./crates/event-log" }
event-query = { path = "./crates/event-query" }
event-exception = { path = "./crates/event-exception" }
event-application-log = { path = "./crates/event-application-log" }
# workspace
gpui = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }
hyper = { version = "1.5.0", features = ["full"] }
tokio = { version = "1.41.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.8.0"
tl = "0.7.8"
wasmtime = "26.0.1"
anyhow = "1.0.93"
