[workspace.dependencies]
serde = { version = "1.0.214", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
chrono = "0.4"
gpui = { git = "https://github.com/zed-industries/zed" }

[package]
name = "rust-ray-cli"
version = "0.1.0"
edition = "2021"

# Performance optimization profiles
[profile.release]
# Maximum optimization for production builds
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
overflow-checks = false

[profile.dev]
# Faster compilation for development
opt-level = 1
overflow-checks = true

# High performance release profile for benchmarking
[profile.release-fast]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
# workspace
gpui = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }
hyper = { version = "1.5.0", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.8.0"
tl = "0.7.8"
anyhow = "1.0.93"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "performance_benchmarks"
harness = false